objects/Survey_Submission__c.object
<CustomObject>
    <description>Response to a Customer Survey.  This is a container object that aggregates a collection of Survey Response records, which are responses to individual questions.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account linked</description>
        <inlineHelpText>Account linked</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Submissions</relationshipLabel>
        <relationshipName>Survey_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Score__c</fullName>
        <description>Total Score for Answered Questions divided by Number of Answered Questions</description>
        <formula>IF(Number_of_Answered_Questions__c &gt; 0, (Total_Score_for_Answered_Questions__c / Number_of_Answered_Questions__c), null)</formula>
        <inlineHelpText>Total Score for Answered Questions divided by Number of Answered Questions</inlineHelpText>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_Answer_Counter__c</fullName>
        <label>CSS Answer Counter</label>
        <summaryFilterItems>
            <field>Survey_Submission_Response__c.questionSortOrder__c</field>
            <operation>greaterOrEqual</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Survey_Submission_Response__c.questionSortOrder__c</field>
            <operation>lessOrEqual</operation>
            <value>7</value>
        </summaryFilterItems>
        <summaryForeignKey>Survey_Submission_Response__c.Survey_Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSS__c</fullName>
        <description>Number Response from Survey Question &quot;Your overall satisfaction with Cadence Customer Support on this Service Request&quot;
5  Very satisfied
4  Satisfied
3  Neutral
2  Dissatisfied
1  Very dissatisfied
0  N/A</description>
        <inlineHelpText>The CSS Number represents the lowest score submitted from the Survey responses for questions 3 through 7.</inlineHelpText>
        <label>CSS</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_bucket__c</fullName>
        <formula>IF(NOT( ISBLANK(CSS__c)),IF( CSS__c &gt; 3 , 
	&apos;Excellent&apos; , 
	IF(CSS__c = 3 , 
	&apos;Good&apos; ,&apos;Poor&apos;))  , &apos;&apos; )</formula>
        <inlineHelpText>CSS Bucket is Poor if any score &lt;3, Good if any score = 3 with none &lt;3, Excellent if all scores &gt;3.</inlineHelpText>
        <label>CSS bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>populated the value of Case lookup field to be searched from global search.</description>
        <label>Case Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Case__r.Hidden_Owner__r.FirstName &amp; &apos; &apos; &amp;  Case__r.Hidden_Owner__r.LastName</formula>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Submissions</relationshipLabel>
        <relationshipName>Survey_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Site__c</fullName>
        <formula>Contact__r.Site_Name__c</formula>
        <label>Contact Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Support_Level__c</fullName>
        <formula>TEXT( Contact__r.Support_Level__c)</formula>
        <label>Contact Support Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact at the customer who completed this survey.</description>
        <inlineHelpText>The contact at the customer who completed this survey.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Submissions</relationshipLabel>
        <relationshipName>Survey_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Survey for which this submission was submitted.</description>
        <inlineHelpText>Survey for which this submission was submitted.</inlineHelpText>
        <label>Customer Survey</label>
        <referenceTo>Customer_Survey__c</referenceTo>
        <relationshipLabel>Survey Submissions</relationshipLabel>
        <relationshipName>Survey_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minute_to_Trigger_Survey_Invitation__c</fullName>
        <description>WIll calculate minute for sending TIP related Survey to customer.
// now() - minute/24/60.</description>
        <formula>IF(  
	AND (
                ISPICKVAL(Case__r.Status, &quot;Closed&quot;), 
		ISPICKVAL(Status__c  , &quot;sent&quot;)
		),                 
		 LastModifiedDate - 0.031, 
		null
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minute to Trigger Survey Invitation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will be toggled &quot;True&quot; to indicate it was the most recently completed survey amongst the submissions</description>
        <label>Most Recent Survey Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_RNG__c</fullName>
        <label>New RNG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Answered_Questions__c</fullName>
        <description>Number of questions that received a numerical response.  Used to calculate a score average.</description>
        <inlineHelpText>Number of questions that received a numerical response.  Used to calculate a score average.</inlineHelpText>
        <label>Number of Answered Questions</label>
        <summaryFilterItems>
            <field>Survey_Submission_Response__c.Response_Value__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Survey_Submission_Response__c.Survey_Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account__r.Parent_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNG1__c</fullName>
        <description>Part 1 in Generating Random Number to be used in URL creation for Survey</description>
        <displayFormat>{0000}</displayFormat>
        <label>RNG1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RNG2__c</fullName>
        <description>Part 2 of Random Number Generator for Survey URL</description>
        <displayFormat>{0}{DD}{MM}</displayFormat>
        <label>RNG2</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RNG__c</fullName>
        <formula>mod(value(RNG1__c) * value(RNG2__c) , 100000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RNG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_to_Send_Internal_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is typically checked via workflow, once a submission is received from a user. The checkbox, in turn, is watched by another workflow, which actually sends the internal alert. (See the PublicSurveySubmittedEmailService Apex class for more details.)</description>
        <inlineHelpText>This checkbox is typically checked via workflow, once a submission is received from a user. The checkbox, in turn, is watched by another workflow, which actually sends the internal alert.</inlineHelpText>
        <label>Ready to Send Internal Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>Date the contact responded to the survey.</description>
        <inlineHelpText>Date the contact responded to the survey.</inlineHelpText>
        <label>Response Date</label>
        <summarizedField>Survey_Submission_Response__c.CreatedDate</summarizedField>
        <summaryForeignKey>Survey_Submission_Response__c.Survey_Submission__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Survey_Submission_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Send_Internal_Alert_For_Responses__c</fullName>
        <description>If a customer responds to this survey, should an internal alert be sent?  Formula field, inherited from parent survey.  (A workflow rule will look at this value.)</description>
        <formula>IF(
  Customer_Survey__r.Send_Internal_Alert_For_Responses__c,
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If a customer responds to this survey, should an internal alert be sent?  Formula field, inherited from parent survey.  (A workflow rule will look at this value.)</inlineHelpText>
        <label>Send Internal Alert For Responses</label>
        <type>Text</type>
    </fields>
	
	<fields>
        <fullName>Case_Reopen_Survey_Check__c</fullName>
        <description>Need to sent survey in following condition: 
1. Case re-open and closed. And survey is in Sent status. 
2. Case re-open and closed. and Survey is in submitted and responsed is register before 5 days.
</description>
        <formula>
				IF( 
			OR( 
			AND( 
			NOT(ISBLANK(Case__r.Survey_Latest_Response_Date__c )), 
			NOT(ISBLANK(Case__r.ClosedDate )), 
			if((Case__r.ClosedDate - Case__r.Survey_Latest_Response_Date__c ) > 5, True, False) 
			), 
			if(ISBLANK(Case__r.Survey_Latest_Response_Date__c ), True, False), 
			if(Case__r.RecordType.DeveloperName = apos;Defaultapos;, True, False) 
			), 
			True, False)

)</formula>
        <formulaTreatBlanksAs>BlankAsBlanks</formulaTreatBlanksAs>
        <inlineHelpText></inlineHelpText>
        <label>Case Reopen Survey Check</label>
        <type>Checkbox</type>
    </fields>
	
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <description>This field tracks when the survey is sent recently.</description>
        <inlineHelpText>This field tracks, when the survey is sent recently.</inlineHelpText>
        <label>Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Sentiment__c</fullName>
        <description>comment on the actions taken as a result of receiving a survey with comments or a poor survey</description>
        <inlineHelpText>Comment on the actions taken as a result of receiving a survey with comments or a poor survey.</inlineHelpText>
        <label>Survey Sentiment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Submission_Number__c</fullName>
        <displayFormat>CSS-{000000}</displayFormat>
        <label>Survey Submission Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Total_Score_for_Answered_Questions__c</fullName>
        <description>Rollup of total response values for all answered questions.  Used to calculate an average.</description>
        <inlineHelpText>Rollup of total response values for all answered questions.  Used to calculate an average.</inlineHelpText>
        <label>Total Score for Answered Questions</label>
        <summarizedField>Survey_Submission_Response__c.Response_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Survey_Submission_Response__c.Response_Value__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Survey_Submission_Response__c.Survey_Submission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Created_by_Cadence_Migration</fullName>
        <columns>Customer_Survey__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Case_Manager__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RNG__c</columns>
        <columns>Case__c</columns>
        <columns>New_RNG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Migration</value>
        </filters>
        <label>All - Created by Cadence Migration</label>
    </listViews>
    <listViews>
        <fullName>Responses</fullName>
        <columns>NAME</columns>
        <columns>Customer_Survey__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Average_Score__c</columns>
        <columns>Response_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Customer_Survey__c</field>
            <operation>equals</operation>
            <value>CST Survey-Eng-STD</value>
        </filters>
        <label>Responses</label>
    </listViews>
    <listViews>
        <fullName>Sent_But_Not_Responded_To</fullName>
        <columns>NAME</columns>
        <columns>Customer_Survey__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>Sent But Not Responded To</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Submission-{0000}</displayFormat>
        <label>Survey Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Submissions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>